# qk

./: Cargo.toml  README.md  flake.nix
src/: app.rs  cmd.rs  command.rs  commands_parser.rs  config.rs  lib.rs  main.rs  project.rs  template.rs  utils.rs
tests/: cli_help.rs  create_project.rs  default_config.rs  list_projects.rs  list_templates.rs  open_project.rs  show_editor.rs
