[package]
name = "qk"
version = "0.1.0"
authors = ["zd4y"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
anyhow = "1.0"
ansi_term = "0.9"
confy = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
lto = true
codegen-units = 1
