[package]
name = "qk"
version = "0.1.0"
authors = ["zd4y"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
anyhow = "1.0"
confy = { git = "https://github.com/rust-cli/confy" }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"

[profile.release]
lto = true
codegen-units = 1
