[package]
name = "qk"
version = "0.1.0"
authors = ["zd4y"]
edition = "2021"
description = "CLI for quickly starting new projects"
homepage = "https://github.com/zd4y/qk"
repository = "https://github.com/zd4y/qk"
readme = "README.md"
license = "MIT"
keywords = ["cli", "quick", "project", "start", "new"]
categories = ["command-line-utilities", "development-tools", "filesystem"]

[dependencies]
anyhow = "1.0"
confy = "0.5.1"

[dependencies.clap]
version = "3.2.14"
features = ["cargo", "env", "deprecated", "wrap_help"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
